# xrc

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/xrc-docs/: SKILL.md
.claude/skills/xrc-release/: SKILL.md
.claude/skills/xrc-scrapers/: SKILL.md
.github/workflows/: release.yml  test.yml
src/: cli.rs  commands.rs  lib.rs  main.rs  output.rs  progress.rs  renderer.rs  runner.rs  utils.rs  writer.rs
src/scrapers/: dmoj.rs  leetcode.rs  mod.rs
src/snapshots/: xrc__renderer__tests__dmoj_project.snap  xrc__renderer__tests__leetcode_project.snap
tests/: cli.rs  golden.rs
tests/fixtures/: dmoj_aplusb.html  leetcode_two_sum.json  leetcode_valid_palindrome.json
tests/fixtures/golden/a_plus_b/: Cargo.toml
tests/fixtures/golden/a_plus_b/src/: main.rs
tests/fixtures/golden/a_plus_b/tests/: cli.rs
tests/fixtures/golden/two_sum/: Cargo.toml
tests/fixtures/golden/two_sum/src/: lib.rs
tests/fixtures/golden/valid_palindrome/: Cargo.toml
tests/fixtures/golden/valid_palindrome/src/: lib.rs
