[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "xrc"
description = "A minimal CLI to give your Rust some exercise."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Francesco Franco" }]
keywords = ["cli", "competitive-programming", "scraper", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/ffrancoa/xrc"

[tool.maturin]
# Pure Rust binary (no Python module): package the `xrc` executable as a wheel
# script so `pip install xrc` puts it on PATH. Version comes from Cargo.toml.
bindings = "bin"
manifest-path = "Cargo.toml"
