[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "xrc"
description = "A minimal CLI to give your Rust some exercise."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Francesco Franco" }]
keywords = ["cli", "competitive-programming", "scraper", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/ffrancoa/xrc"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
